attempt to stop horizontal scroll part 4

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,8 @@ body {
   font-weight: 300;
   color: #222;
   font-size: 11pt;
+  margin: 0;
+  padding: 0;
 }
 
 header {
